Fix bug 389060 (Heaptrack analysis keeps firing /usr/bin/plasmoidviewer)

Summary:
Old version has wrong logic - we should always use "kdevexecute" plugin instead any IExecutePlugin instance. New version also checks launch configuration type and starts analysis only for native applications.

BUG: 389060

Reviewers: #kdevelop, mwolff

Reviewed By: #kdevelop, mwolff

Subscribers: mwolff, arrowd, kfunk, kossebau, kdevelop-devel

Tags: #kdevelop

Differential Revision: https://phabricator.kde.org/D15565